@@ -1,3 +1,8 @@
+2004-02-15  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/kapi.h: Add throw specifications throughout.
+	* src/kapi.cxx: Ditto.
+
 2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/dlmalloc.cxx (Cyg_Mempool_dlmalloc_Implementation): Fixed
